# lingua_self-distillation

./: .d0003917967_nodeinfo  .debug_std.txt  .gitignore  README.md  main.py  pyproject.toml
apps/main/configs/: debug.yaml  debug_2.yaml  debug_3.yaml  debug_4.yaml  debug_5.yaml
apps/self_distillation/: generate.py  train.py  transformer.py
apps/self_distillation/configs/: debug.yaml  debug_SD.yaml
md/: debug_2_analysis.md  debug_3_analysis.md
scripts/: debug.sh  debug_2.sh  debug_3.sh  debug_4.sh  debug_5.sh  debug_reserve.sh  git_first_commit.sh
setup/: download_tokenizer.py  download_tokenizer_2.py
std_message/: debug_2_std.txt  debug_3_std.txt  debug_4_std.txt  debug_std.txt
