[project]
name = "lingua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blobfile>=3.1.0",
    "datatrove>=0.6.0",
    "lm-eval>=0.4.9.1",
    "msgspec>=0.19.0",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "orjson>=3.11.3",
    "pynvml>=13.0.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scipy>=1.16.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "viztracer>=1.0.4",
    "wandb>=0.22.2",
    "weave>=0.52.9",
    "xformers>=0.0.32.post2",
]
